reports/indexing_selecting.err.log
Traceback (most recent call last):
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\site-packages\nbclient\client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\site-packages\jupyter_core\utils\__init__.py", line 160, in wrapped
    return loop.run_until_complete(inner)
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\site-packages\nbclient\client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\site-packages\nbclient\client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\Charlie\.conda\envs\pythongis\lib\site-packages\nbclient\client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
#### **Selección mediante `slicing`**

Podemos seleccionar columnas indicando un **rango de etiquetas**.

```{admonition} Selección de columnas mediante slicing
:class: tip

df[columnA:columnN]
```

Retorna los valores desde `columnA` hasta `columnN`, incluyendolas
------------------

[1;36m  Cell [1;32mIn[9], line 3[1;36m[0m
[1;33m    Podemos seleccionar columnas indicando un **rango de etiquetas**.[0m
[1;37m            ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (1841177458.py, line 3)

